Jwt authentification done for server side

--- a/wally/src/main/resources/application.properties
+++ b/wally/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.password=admin
 
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
+
+# App Properties
+app.secret=secretdiscret
+app.token-validity-in-seconds=2592000
+
+spring.resources.add-mappings=false
